--- a/ProjectUAS_EzBooking_Client/src/administrator/FormDashboardAdministrator.form
+++ b/ProjectUAS_EzBooking_Client/src/administrator/FormDashboardAdministrator.form
@@ -244,10 +244,7 @@
                 </DimensionLayout>
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace min="0" pref="13" max="32767" attributes="0"/>
-                          <Component id="jLabel1" min="-2" pref="43" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="jLabel1" alignment="1" pref="56" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
               </Layout>
@@ -355,10 +352,7 @@
                 </DimensionLayout>
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace min="0" pref="13" max="32767" attributes="0"/>
-                          <Component id="jLabel3" min="-2" pref="43" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="jLabel3" alignment="1" pref="56" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
               </Layout>
