--- a/ProjectUAS_EzBooking_Client/src/MainForm/FormLogin.form
+++ b/ProjectUAS_EzBooking_Client/src/MainForm/FormLogin.form
@@ -52,7 +52,14 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="lblRegister" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Group type="102" attributes="0">
+                          <EmptySpace min="96" pref="96" max="-2" attributes="0"/>
+                          <Component id="btnLogin" min="-2" pref="102" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
+                          <Component id="btnCancel" min="-2" pref="102" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="103" alignment="0" groupAlignment="1" attributes="0">
+                          <Component id="cbShowPassword" min="-2" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="1" attributes="0">
                                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
@@ -64,13 +71,6 @@
                                   <Component id="txtPassword" max="32767" attributes="0"/>
                               </Group>
                           </Group>
-                          <Group type="102" attributes="0">
-                              <EmptySpace min="96" pref="96" max="-2" attributes="0"/>
-                              <Component id="btnLogin" min="-2" pref="102" max="-2" attributes="0"/>
-                              <EmptySpace pref="46" max="32767" attributes="0"/>
-                              <Component id="btnCancel" min="-2" pref="102" max="-2" attributes="0"/>
-                          </Group>
-                          <Component id="cbShowPassword" alignment="1" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace pref="18" max="32767" attributes="0"/>
